# gamut

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-mypy.py  pyproject.toml  setup.cfg  setup.py  test.py  test_glm.py
.github/: conductor-monster.sh  does-artifact-exist.py  does-dependency-artifact-exist.py  download-artifact.py
.github/workflows/: check.yml  test.yml
codegen/: __init__.py
codegen/math/: __init__.py  math.cpp  matrix.py  pod.py  quaternion.py  template.py  vector.hpp  vector.py
codegen/math/templates/: _math.cpp  _math.pyi  _matrix.hpp  _matrixtype.hpp  _modulestate.hpp  _pod.hpp  _podtype.hpp  _quaternion.hpp  _quaterniontype.hpp  _test_api.c  _vector.hpp  _vectortype.hpp  gamut-math-api.h  math.h
examples/: README.md  breakout.py  csg.py  cube.py  examplescommon.py  instancing.py  navigation.py  physics.py  test.py  text.py  transparency.py  triangle.py
examples/resources/: navmesh.glb
include/gamut/: math.h
src/gamut/: __init__.py  _application.py  _bullet.cpp  _camera.py  _glcontext.py  _glmhelp.py  _sdl.py  _timer.py  _transformnode.py  _window.py  gc.py  glmhelp.py  gltf.py  mypy.py
src/gamut/ai/: __init__.py  _navigationmesh3d.py
src/gamut/audio/: __init__.py  _alcontext.py  _listener.py  _multispeaker.py  _sound.py  _source.py  _speaker.py
src/gamut/event/: __init__.py  _application.py  _bind.py  _event.py  _event_loop.py  _future.py  _task.py  _taskmanager.py  mypy.py
src/gamut/geometry/: __init__.py  _boundingbox2d.py  _boundingbox3d.py  _capsule.py  _circle3d.py  _composite3d.py  _cone.py  _convexhull.py  _csg.py  _cylinder.py  _error.py  _getmaxcircleradiusbetweenpointandlinesegmentalongdirection.py  _linesegment2d.py  _linesegment3d.py  _mesh.py  _mesh2d.py  _mesh3d.py  _meshmodifier.py  _plane.py  _polygon.py  _protocol.py  _quad3d.py  _rectangle3d.py  _rectangularcuboid.py  _sphere.py  _triangle2d.py  _triangle3d.py  _triangulate.cpp  _viewfrustum3d.py
src/gamut/graph/: __init__.py  _graph.py  _navigationmesh3d.py  _simplepathfinder.py
src/gamut/graphics/: __init__.py  _buffer.py  _color.py  _image.py  _jsonshaderloader.py  _pack2d.py  _quad.py  _rendertarget.py  _shader.py  _shadercodepreprocessor.py  _texture.py  _texture2d.py  _texturecube.py  _textureview.py
src/gamut/math/: __init__.py  _b.hpp  _bvector1.hpp  _bvector2.hpp  _bvector3.hpp  _bvector4.hpp  _d.hpp  _dmatrix2x2.hpp  _dmatrix2x3.hpp  _dmatrix2x4.hpp  _dmatrix3x2.hpp  _dmatrix3x3.hpp  _dmatrix3x4.hpp  _dmatrix4x2.hpp  _dmatrix4x3.hpp  _dmatrix4x4.hpp  _dquaternion.hpp  _dvector1.hpp  _dvector2.hpp  _dvector3.hpp  _dvector4.hpp  _f.hpp  _fmatrix2x2.hpp  _fmatrix2x3.hpp  _fmatrix2x4.hpp  _fmatrix3x2.hpp  _fmatrix3x3.hpp  _fmatrix3x4.hpp  _fmatrix4x2.hpp  _fmatrix4x3.hpp  _fmatrix4x4.hpp  _fquaternion.hpp  _fvector1.hpp  _fvector2.hpp  _fvector2x2.hpp  _fvector2x3.hpp  _fvector2x4.hpp  _fvector3.hpp  _fvector3x2.hpp  _fvector3x3.hpp  (+66 more)
src/gamut/navigation/: _navigation.cpp
src/gamut/peripheral/: __init__.py  _controller.py  _keyboard.py  _mouse.py  _peripheral.py
src/gamut/physics/: __init__.py  _body.py  _collision.py  _groups.py  _physics.cp310-win_amd64.pyd  _physics.cpp  _world.py
src/gamut/text/: __init__.py  _atlasfont.py  _break.py  _character.py  _face.py  _font.py
stubs/: glm.pyi  glmold.pyi
test/: application.py  conftest.py  test_application.py  test_camera.py  test_gc.py  test_glcontext.py  test_mypy.py  test_timer.py  test_transformnode.py  test_window.py
test/ai/: test_navigationmesh3d.py
test/audio/: conftest.py  test_listener.py  test_multispeaker.py  test_rendering.py  test_sample.py  test_sound.py  test_speaker.py  test_stream.py  util.py
test/collision/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Test_Collision.vcxproj  Test_Collision.vcxproj.filters  cmake_install.cmake
test/event/: mypy-event-plugin.ini  mypy-main-plugin.ini  test_application.py  test_bind.py  test_event_attrs.py  test_event_loop.py  test_event_or.py  test_event_prototype.py  test_event_sending.py  test_future.py  test_mypy.py  test_task.py  test_taskmanager.py
test/geometry/: test_boundingbox2d.py  test_boundingbox3d.py  test_capsule.py  test_circle3d.py  test_composite3d.py  test_cone.py  test_convexhull.py  test_csg.py  test_cylinder.py  test_error.py  test_getmaxcircleradiusbetweenpointandlinesegmentalongdirection.py  test_linesegment2d.py  test_linesegment3d.py  test_mesh.py  test_mesh2d.py  test_mesh3d.py  test_plane.py  test_polygon.py  test_quad3d.py  test_rectangle3d.py  test_rectangularcuboid.py  test_sphere.py  test_triangle2d.py  test_triangle3d.py  test_viewfrustum3d.py
test/gltf/: test_basic.py  test_box.py
test/graph/: test_graph.py  test_navigationmesh3d.py  test_simplepathfinder.py
test/graphics/: test_buffer.py  test_color.py  test_image.py  test_jsonshaderloader.py  test_pack2d.py  test_quad.py  test_rendertarget.py  test_shader.py  test_shadercodepreprocessor.py  test_texture.py  test_texture2d.py  test_texturecube.py
test/graphics/shader_execute/: test_basic.py  test_blend.py  test_colorwrite.py  test_depth.py  test_face_culling.py  test_instancing.py  test_occlusion.py
test/math/: test_api.py  test_matrix.py  test_pod.py  test_quaternion.py  test_vector.py
test/peripheral/: test_controller.py  test_keyboard.py  test_mouse.py  test_peripheral.py
test/peripheral/virtual/: __init__.py  _nyi.py  _uinput.py
test/physics/: test_body.py  test_world.py
test/physics/simulate/: test_angular.py  test_collision.py  test_gravity.py  test_linear.py  test_restitution.py  test_rollingfriction.py  test_sleep.py  test_spinningfriction.py  test_tangible.py
test/resources/: gamut.tga  gamut.tif  navmesh.glb  shader.fragment.glsl  shader.geometry.glsl  shader.include.glsl  shader.json  shader.vertex.glsl
test/text/: test_atlasfont.py  test_break.py  test_character.py  test_face.py  test_font.py
tools/: generate-glm-stubs.py
