[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
plugins = 'gamut.mypy'
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
implicit_reexport = false
strict_equality = true
warn_unused_ignores = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[tool.isort]
known_pytest = 'pytest'
known_mypy = 'mypy'
known_setuptools = 'setuptools'

sections = ['FUTURE', 'LOCALFOLDER', 'FIRSTPARTY', 'STDLIB', 'MYPY', 'PYTEST',
            'SETUPTOOLS', 'THIRDPARTY']
no_lines_before = ['LOCALFOLDER', 'FIRSTPARTY', 'STDLIB', 'MYPY', 'PYTEST',
                   'SETUPTOOLS', 'THIRDPARTY']

import_heading_localfolder = 'gamut'
import_heading_firstparty = 'gamut'
import_heading_stdlib = 'python'
import_heading_mypy = 'mypy'
import_heading_pytest = 'pytest'
import_heading_setuptools = 'setuptools'
import_heading_thirdparty = 'TODO: add isort heading'
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true