[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
plugins = 'gamut.mypy'
python_version = '3.10'
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
implicit_reexport = false
strict_equality = true
warn_unused_ignores = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    'OpenGL',
    'OpenGL.GL',
    'OpenGL.GL.framebufferobjects',
    'OpenGL.GL.shaders',
    'PIL',
    'sdl2'
]
ignore_missing_imports = true

[tool.isort]
known_evdev = 'evdev'
known_pytest = 'pytest'
known_mypy = 'mypy'
known_setuptools = 'setuptools'
known_sdl2 = 'sdl2'
known_opengl = 'OpenGL'
known_pil = 'PIL'
known_numpy = 'numpy'
known_glm = 'glm'

sections = ['FUTURE', 'LOCALFOLDER', 'FIRSTPARTY', 'STDLIB', 'EVDEV', 'MYPY',
            'NUMPY', 'PIL', 'GLM', 'OPENGL', 'SDL2', 'PYTEST', 'SETUPTOOLS',
            'THIRDPARTY']
no_lines_before = ['LOCALFOLDER', 'FIRSTPARTY', 'STDLIB', 'EVDEV', 'MYPY',
                   'NUMPY', 'PIL', 'GLM', 'OPENGL', 'SDL2', 'PYTEST',
                   'SETUPTOOLS', 'THIRDPARTY']

import_heading_localfolder = 'gamut'
import_heading_evdev = 'evdev'
import_heading_firstparty = 'gamut'
import_heading_stdlib = 'python'
import_heading_mypy = 'mypy'
import_heading_numpy = 'numpy'
import_heading_pillow = 'pillow'
import_heading_glm = 'pyglm'
import_heading_opengl = 'pyopengl'
import_heading_sdl2 = 'pysdl2'
import_heading_pytest = 'pytest'
import_heading_setuptools = 'setuptools'
import_heading_thirdparty = 'TODO: add isort heading'
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true