
[metadata]
name = gamut
version = 0.0.1
author = Erik Soma
author_email = stillusingirc@gmail.com
url = https://github.com/esoma/gamut
description = Python game engine
;long_description = file: README.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    
[options]
python_requires = >= 3.6
package_dir =
     = src
packages = find:
install_requires =
    setuptools

[options.packages.find]
where = src
