
[metadata]
name = gamut
version = 0.0.1
author = Erik Soma
author_email = stillusingirc@gmail.com
url = https://github.com/esoma/gamut
description = Python game engine
;long_description = file: README.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers

[options]
python_requires = >= 3.6
package_dir =
     = src
packages = find:
install_requires =
    setuptools

[options.packages.find]
where = src

[flake8]
ignore = E, F, W, T
    E261 # at least two spaces before inline comment
select =
    F401 # module imported but unused
    E111 # indentation is not a multiple of four
    E2   # whitespace
    E501 # line too long
    E7   # statements
    W1   # indentation warning
    W2   # whitespace warning
    W3   # blank line warning
    W503 # line break before binary operator
    W505 # doc line too long
    T100 # Fixme found
    T101 # Todo found
    T102 # XXX found
