
[metadata]
name = gamut
version = 0.0.1
author = Erik Soma
author_email = stillusingirc@gmail.com
url = https://github.com/esoma/gamut
description = Python game engine
;long_description = file: README.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers

[options]
python_requires = >= 3.9
package_dir =
     = src
packages = find:
install_requires =
    freetype-py
    numpy
    Pillow
    PyOpenAL
    PyOpenGL
    pysdl2==0.9.9
    pysdl2-dll==2.0.14.post2
    uharfbuzz

[options.packages.find]
where = src

[options.package_data]
gamut = py.typed

[options.extras_require]
dev =
    pre-commit
test =
    pytest
    pytest-cov
    mypy==0.910
    evdev; sys_platform == "linux"

[flake8]
ignore = E, F, W, T
    E261 # at least two spaces before inline comment
per-file-ignores =
    # flake8 is unable to detect array usage
    test/math/test_vector.py:F401
    # flake8 is unable to detect array usage
    test/math/test_matrix.py:F401
    # flake8 is unable to detect array usage
    test/math/test_quaternion.py:F401
select =
    F401 # module imported but unused
    E111 # indentation is not a multiple of four
    E2   # whitespace
    E501 # line too long
    E7   # statements
    W1   # indentation warning
    W2   # whitespace warning
    W3   # blank line warning
    W503 # line break before binary operator
    W505 # doc line too long
    T100 # Fixme found
    T101 # Todo found
    T102 # XXX found
